# StarterCpp

./: CMakeLists.txt  README.md
cmake/: get_cpm.cmake
cpm_ext/: .gitignore
src/: CMakeLists.txt  hello_world.cpp
test/: CMakeLists.txt  tests.cpp
